test: improve coverage on unrelated services